--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "morse-code-tdd",
-  "version": "1.0.0",
+  "name": "morse-code",
+  "version": "2.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
-    "jest": "^27.1.0"
+    "jest": "^30.2.0"
   }
 }
